{
    "name": "Inputs",
    "maps": [
        {
            "name": "Movement",
            "id": "e5e67b38-4d0e-4a0e-a6f2-7e4bbe40a18a",
            "actions": [
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "8bea9be1-5b79-4de6-8abb-917cf3961061",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "99bec640-460c-4dd1-8544-08eb46e15cdf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "909411d8-3a34-4258-9b22-c880d3a8b98e",
                    "path": "<Touchscreen>/touch0/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ada9487c-266e-40b0-9815-f0618b8bc8bc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7051b88-54ed-481e-9aa2-b182a9485788",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Pinch",
            "id": "644f9d3f-7e40-4442-ae85-ae3353926b34",
            "actions": [
                {
                    "name": "Touch1",
                    "type": "Value",
                    "id": "d8cd1ceb-7d25-47ff-ad70-92bdc7998ef8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Touch2",
                    "type": "Value",
                    "id": "6850d5ce-c2b6-4555-8bb3-75688c8da8bd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Tap2",
                    "type": "Button",
                    "id": "1739bf50-318a-4375-9cb2-bf8b26bd9507",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "040769d3-97e4-42c8-ac62-587b19c6cea4",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a74ea0e2-441d-4163-8f01-9101b2e1faa5",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4da3a88-11e2-412e-b161-94f5b8e0dd0e",
                    "path": "<Touchscreen>/touch1/startPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Click",
            "id": "cf098297-83e9-4a01-9f08-0e3f24694d9c",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "95267f5b-f284-42f3-9f23-99ee18b769d4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "456127dd-a7d2-4331-a988-204eeb2247c7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd7c3563-1320-49e4-beb0-db6e68f9d682",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MouseMovement",
            "id": "4f270a2d-7ce5-425c-aad9-d971c931c673",
            "actions": [
                {
                    "name": "MouseScrollDelta",
                    "type": "Value",
                    "id": "248d857e-923b-4078-b631-b4f0fb43c3f4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePress",
                    "type": "Button",
                    "id": "bdcde478-f452-45be-821b-9304ab213faf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1c2c4f81-eb25-48a5-9b82-4e630a03e19d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScrollDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bcd32d0-b42e-444b-b3e3-7c3f1ac1228c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}